feat: archive minecraft servers and maps